# computational-geometry

build_convex_hull_from_segments/: CMakeLists.txt  main.cpp
convex_hull/: CMakeLists.txt  convex_hull.cpp  main.cpp  test.cpp
convex_hull/.cache/clangd/index/: test.cpp.5EBDEA62585ADB16.idx
line_intersections/: CMakeLists.txt  EventQueue.cpp  EventQueue.h  Queue.cpp  Queue.h  Status.h  main.cpp
sort_convex_hull_segments/: CMakeLists.txt  main.cpp
week_03/: problems
week_03/convex_hull/: CMakeLists.txt  convex_hull.cpp
